# ragstudio

./: .gitignore  .gitleaks.toml  .mailmap  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  config.example.yml  pyproject.toml  pytest.ini
.archive/: BANDIT_FIXES_REPORT.md  BANDIT_SECURITY_REPORT.md  DEAD_CODE_REMOVAL_SUMMARY.md  SECURITY_REPORTS_INDEX.md  bandit-report-after.json  bandit-report-final.html  bandit-report-final.json  bandit-report.json  bandit_report.html
.github/: WORKFLOW_PERMISSIONS_FIX.md
.github/workflows/: README.md  SECURITY.md  ci.yml  deploy.yml  pr-validation.yml  release-deploy.yml  tests.yml
data/models/strategy_scorer_hf/: label_encoder.pkl  model.safetensors  scaler.pkl
data/models/strategy_scorer_hf/checkpoint-10/: optimizer.pt  scheduler.pt  trainer_state.json
data/models/strategy_scorer_hf/checkpoint-2/: model.safetensors  optimizer.pt  scheduler.pt  trainer_state.json
data/models/strategy_scorer_hf/checkpoint-4/: model.safetensors  optimizer.pt  scheduler.pt  trainer_state.json
data/models/strategy_scorer_hf/checkpoint-6/: model.safetensors  optimizer.pt  scheduler.pt  trainer_state.json
data/models/strategy_scorer_hf/checkpoint-8/: model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
docs/: README.md  cli-guide.md  getting-started.md
docs/security/: README.md
src/core/: __init__.py
src/core/cache/: __init__.py  redis_cache.py
src/core/chunk/: chunker.py  langchain_chunker.py  strategy_selector.py
src/core/cli/: __init__.py  __main__.py  app.py  main.py
src/core/cli/commands/: __init__.py  batch.py  batch_old.py.backup  chunk.py  eval.py  info.py  ingest.py  retry.py  search.py
src/core/cli/utils/: __init__.py  display.py  output.py  quality_check.py  security.py  validation.py
src/core/config/: __init__.py  atlas_config.py  defaults.py  ocr_settings.py
src/core/pipeline/: __init__.py  history.py  interactive.py  retry.py  status.py
src/core/rag/: chain.py  embeddings.py  feedback_loop.py  hybrid_search.py  json_vector_store.py  query_expansion.py  reranker.py  retrievers.py  vector_store.py
src/core/storage/: metadata_store.py  models.py
src/core/vector/: __init__.py  base.py  embeddings.py  enhanced_connectors.py  exporter.py  pinecone_store.py  qdrant_store.py  weaviate_store.py
src/workflows/: __init__.py  pipeline_with_metadata.py
src/workflows/analyzer/: __init__.py  complexity.py  document_type_classifier.py  image_quality_detector.py  ocr_quality_detector.py  profiler.py  schema_extractor.py  scientific_detector.py
src/workflows/ingest/: aggressive_ocr_corrector.py  ai_ocr_corrector.py  document_detector.py  intelligent_orchestrator.py  langchain_loader.py  langchain_loader_old.py  loader.py  normalize.py  ocr_correction_pipeline.py  ocr_corrector_unstructured.py  ocr_repair.py  pdf_cleaner.py
src/workflows/ingest/ocr/: easyocr_engine.py  paddleocr_engine.py
src/workflows/io/: chunking_logger.py  json_exporter.py  processing_logger.py  reader.py  schema.py  writer.py
src/workflows/ml/: __init__.py  dataset_enrichment.py  embeddings.py  feature_engineering.py  feedback_collector.py  model_monitor.py  retraining_pipeline.py  strategy_scorer_hf.py  training.py
src/workflows/ocr/: __init__.py  ocr_nougat.py  ocr_qwen_vl.py
src/workflows/router/: __init__.py  ocr_router.py
test-ragctl/: pyvenv.cfg
tests/: cli_e2e_test.sh  conftest.py  performance_testing.py  volume_testing.py
tests/cli/: __init__.py  conftest.py  test_batch.py  test_chunk.py
tests/data/: test_document.txt
tests/e2e/: test_cli_batch_retry.py
tests/functional/: README.md  setup_test_data.sh  test_ragctl.sh  test_ragctl.sh.bak2
tests/integration/: test_ml_pipeline.py  test_vectordb.py
tests/security/: __init__.py  test_cli_security.py
tests/unit/: test_atlas_config.py  test_chunk_helpers.py  test_chunker.py  test_display.py  test_embeddings.py  test_feature_engineering.py  test_json_vector_store.py  test_langchain_chunker.py  test_logging_modes.py  test_metadata_store.py  test_normalize.py  test_output.py  test_rag_embeddings_manager.py  test_rag_vector_store.py  test_security.py  test_strategy_selector.py  test_training.py  test_validation.py
tests/unit/pipeline/: test_history.py  test_interactive.py  test_retry.py  test_status.py
